testData/annotator/CPE/CPEWarningTestData.secarc
component A {

    <error descr="Multiple unspecified vulnerabilities in Google V8 before 4.7.80.23, as used in Google Chrome before 47.0.2526.73, allow attackers to cause a denial of service or possibly have other impact via unknown vectors. (Unknown, CVSS: 7.5)">cpe "cpe:2.3:a:google:v8:4.6.85.23:*:*:*:*:*:*:*";</error>
}